tests/ui/typeck/no-type-for-node-ice.stderr
error[E0609]: no field `homura` on type `&'static str`
  --> $DIR/no-type-for-node-ice.rs:4:8
   |
LL |     "".homura[""];
   |        ^^^^^^ unknown field

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0609`.
